--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- About Section Content-->
-                <div class="container"><p>This is where you will gather together your evidence. Why should we care about this issue? It is a good idea to start with an anecdote and this section will be graded on investment and enthusiasm. Remember, people are moved by opinions and passion. You may want to incorporate a story that will influence people to care. You can add images and videos that speak to this anecdote, either in the portfolio section, where you should have a mix of mediums, including images, videos, evidence, and calls to action, or you can add one powerful image or video here by copying and pasting the code into this divider (I recommend the former so that it is not too busy). Once you have captured your audience's attention and got them invested, introduce your main argument and scholars. This section should include the "so-what?" of your argument. This container will expand as needed but still strive for concision.</p>
+                <div class="container"><p>Success for the disabled is very important as many who are dissabled feel they will be juged or made fun of jsut becuase of there dissability causeing them to not want ot work whihc leads to them not having a job. Is this really how we want peopel with disablitts to feel? Now I dont personly have a dissability but I would not feel good if this is how I thought others looked at me.I belive as a society we should be more welcoming and incorporative to the disabled to encourage them to want to go out and get a job.</p>
                 </div>
                 </div>
                 <!-- About Section Button-->
@@ -152,7 +152,7 @@
                 </div>
                <!--List Contributor's Names and attributions-->
                 <div class="row justify-content-center">
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Harrison Yosick for more infomation on the about section and first image and information on first image. x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
