--- a/index.html
+++ b/index.html
@@ -465,10 +465,10 @@
                    <div class="col-sm"><p>Contact Harrison Yosick for more infomation on the about section and first image and information on first image. x</p></div>
 
 
-                   <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                   <div class="col-sm"><p>Contact Jacob Tabish for more infomation on the video on the third image.  x</p></div>
 
 
-                   <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                   <div class="col-sm"><p>Contact Dillon Walsh for more infomation on the third video with. x</p></div>
 
 
                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
@@ -813,13 +813,15 @@
                                    <!-- Portfolio Modal - Image-->
 
 
-                                       <a class="btn btn-primary btn-lg" href="assets/documents/Zombies.pdf" target="_blank" alt="...">Click here to open this PDF in a new window</a><!-- Alternatively, you can replace what the button says with the name of the article or whatever you want-->
+                                       <iframe width="560" height="315" src="https://www.youtube.com/embed/twaKuhvYpss" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
                                    <!-- Portfolio Modal - Text-->
 
 
-                                   <p class="mb-4"><br>You can also add a PDF the same way you add an image.  Just write where to find the PDF that you have uploaded and like the video and images, replace this text with what is significant about this reading. Target blank allows the PDF to open in a new window.</p>
+                                   <p class="mb-4"><br>
+The video is about disability and work and how they both expect each other. Disability is still a barrier to employment for millions of people- but it doesn't have to be this way. A medical professional, Hannah Barham Brown goes into here in life experiences to argue that people with disabilities are an asset more employers need to welcome. Hannah goes into her life as a diabled person when she was diagnosed with a syndrome called Ehlers-Danlos Syndrome which is a syndrome that affects your connective tissue. After being Diagnosed with this disability she was put in a wheelchair. She had trouble doing a lot of stuff including getting a job because of her disability. The significance of this video is to state that people with disabilities are normal people, they just have a few more problems than others and that disabled people have talent like “normal” people. It is just overlooked because they are diabled. Disability is a big thing that is overlooked in the workplace and a problem that needs to be looked into more.
+.</p>
 
 
                                    <button class="btn btn-primary" data-bs-dismiss="modal">
