--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                            </div>
 
 
-                           <img class="img-fluid" src="assets/img/portfolio/zombies.png" alt="..." />
+                           <img class="img-fluid" src="assets/img/portfolio/Youtube.png" alt="..." />
 
 
                        </div>
@@ -405,7 +405,7 @@
                <!-- About Section Content-->
 
 
-               <div class="container"><p>Success for the disabled is very important as many who are dissabled feel they will be juged or made fun of jsut becuase of there dissability causeing them to not want ot work whihc leads to them not having a job. Is this really how we want peopel with disablitts to feel? Now I dont personly have a dissability but I would not feel good if this is how I thought others looked at me.I belive as a society we should be more welcoming and incorporative to the disabled to encourage them to want to go out and get a job.</p>
+               <div class="container"><p>Success for the disabled is very important as many who are dissabled feel they will be judged or made fun of just because of their disability causing them to not want to work which leads to them not having a job. Is this really how we want people with disabilities to feel? Now I don't personally have a disability but I would not feel good if this is how I thought others looked at me.I believe as a society we should be more welcoming and incorporative to the disabled to encourage them to want to go out and get a job.</p>
 
 
                </div>
@@ -597,7 +597,7 @@
                                    <!-- Portfolio Modal - Title-->
 
 
-                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">3M</h2>
+                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Peckham</h2>
 
 
                                    <!-- Icon Divider-->
@@ -621,13 +621,13 @@
                                    <!-- Portfolio Modal - Image-->
 
 
-                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/3M.png" alt="..." />
+                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Peckham.jfif" alt="..." />
 
 
                                    <!-- Portfolio Modal - Text-->
 
 
-                                   <p class="mb-4">This is where you will say something about the image or video. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public.</p>
+                                   <p class="mb-4">After doing some research about local organizations that are helping the unemployed disabled get back into the wokr force i found a company that is in east lansing caled Peckham they offer entry level jobs for people with disabilities to get them back into the work force. There mission is to “provide job training and competitive employment opportunities fro persons with disabilities” that This is where you will say something about the image or video. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public.</p>
 
 
                                    <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -789,7 +789,7 @@
                                    <!-- Portfolio Modal - Title-->
 
 
-                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of PDF</h2>
+                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Disabilities and Work</h2>
 
 
                                    <!-- Icon Divider-->
@@ -1076,7 +1076,7 @@ The video is about disability and work and how they both expect each other. Disa
                                <div class="col-lg-8">
 
 
-                                   <!-- Portfolio Modal - Title-->
+                                   <!-- Portfolio Modal - -->
 
 
                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of Image 6</h2>
