--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                <!-- Masthead Subheading-->
 
 
-               <p class="masthead-subheading font-weight-light mb-0">And Why It Matters</p>
+               <p class="masthead-subheading font-weight-light mb-0">This matters because there are so many diabled people out there that have loads of talent that companies are wasting just because they are diabled.</p>
 
 
            </div>
@@ -405,7 +405,7 @@
                <!-- About Section Content-->
 
 
-               <div class="container"><p>Success for the disabled is very important as many who are dissabled feel they will be judged or made fun of just because of their disability causing them to not want to work which leads to them not having a job. Is this really how we want people with disabilities to feel? Now I don't personally have a disability but I would not feel good if this is how I thought others looked at me.I believe as a society we should be more welcoming and incorporative to the disabled to encourage them to want to go out and get a job.</p>
+               <div class="container"><p>Success for the disabled is very important as many who are dissabled feel they will be judged or made fun of just because of their disability.This will cause them to not want to work which leads to them not having a job. Is this really how we want people with disabilities to feel? Now I don't personally have a disability but I would not feel good if this is how I thought others looked at me.I believe as a society we should be more welcoming and incorporative to the disabled to encourage them to want to go out and get a job.</p>
 
 
                </div>
@@ -462,19 +462,19 @@
                <div class="row justify-content-center">
 
 
-                   <div class="col-sm"><p>Contact Harrison Yosick for more infomation on the about section and first image and information on first image. x</p></div>
+                   <div class="col-sm"><p>Contact Harrison Yosick for more infomation on the about section and first image and information on first image. </p></div>
 
 
-                   <div class="col-sm"><p>Contact Jacob Tabish for more infomation on the video on the third image.  x</p></div>
+                   <div class="col-sm"><p>Contact Jacob Tabish for more information on the video on the third image under the portfolio tab and also the “why it matters” section under the title.</p></div>
 
 
-                   <div class="col-sm"><p>Contact Dillon Walsh for more infomation on the third video with. x</p></div>
+                   <div class="col-sm"><p>Contact Dillon Walsh for more information on the about section. </p></div>
 
 
-                   <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                   <div class="col-sm"><p>Contact Rachel Lowe for more information on the organization section. x</p></div>
 
 
-                   <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                   <div class="col-sm"><p>Contact Michael Hecht for more infomation on x</p></div>
 
 
                </div>
@@ -483,7 +483,7 @@
                <div class="row justify-content-center">
 
 
-                   <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                   <div class="col-sm"><p>Contact Haley Roush for more infomation on </p></div>
 
 
                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
@@ -531,13 +531,13 @@
                        <h4 class="text-uppercase mb-4">Organizations</h4>
 
 
-                       <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
+                       <a class="btn btn-outline-light btn-social mx-1" https://www.facebook.com/CampaignforDisabilityEmployment/="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
 
 
-                       <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
+                       <a class="btn btn-outline-light btn-social mx-1" https://twitter.com/askearn?lang=en="#!"><i class="fab fa-fw fa-twitter"></i></a>
 
 
-                       <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                       <a class="btn btn-outline-light btn-social mx-1" https://www.linkedin.com/company/disabilityin?original_referer=https%3A%2F%2Fwww.google.com%2F="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
 
 
                    </div>
@@ -627,7 +627,7 @@
                                    <!-- Portfolio Modal - Text-->
 
 
-                                   <p class="mb-4">After doing some research about local organizations that are helping the unemployed disabled get back into the wokr force i found a company that is in east lansing caled Peckham they offer entry level jobs for people with disabilities to get them back into the work force. There mission is to “provide job training and competitive employment opportunities fro persons with disabilities” that This is where you will say something about the image or video. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public.</p>
+                                   <p class="mb-4">After doing some research about local organizations that are helping the unemployed disabled get back into the workforce I found a company that is in east lansing called Peckham they offer entry level jobs for people with disabilities to get them back into the workforce. Their mission is to “provide job training and competitive employment opportunities for persons with disabilities”</p>
 
 
                                    <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -1007,13 +1007,14 @@ The video is about disability and work and how they both expect each other. Disa
                                    <!-- Portfolio Modal - Image-->
 
 
-                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage5.png" alt="..." />
+                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Disabled Employment.png" alt="..." />
 
 
                                    <!-- Portfolio Modal - Text-->
 
 
-                                   <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public..</p>
+                                   <p class="mb-4">Many companies across a variety of industries offer positions that give employees the option to work from home. Positions in marketing and computer operations are commonly able to be filled from outside an office, and this structure of work has grown even more available since the Covid-19 pandemic. Some companies have changed their work atmosphere entirely by eliminating the in-office option. Airbnb, Spotify, and Dropbox all have openings in various positions in various departments that are permanently filled from home. Working from home could be a great opportunity for someone with disabilities that prevent them from comfortably working in an office. We hope that in the future more companies make accommodations for positions that have the potential to be filled from home in order to help equalize opportunity as much as possible. 
+.</p>
 
 
                                    <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -1076,10 +1077,10 @@ The video is about disability and work and how they both expect each other. Disa
                                <div class="col-lg-8">
 
 
-                                   <!-- Portfolio Modal - -->
+                                   <!-- Portfolio Modal - Title-->
 
 
-                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of Image 6</h2>
+                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0"></h2>
 
 
                                    <!-- Icon Divider-->
@@ -1109,7 +1110,7 @@ The video is about disability and work and how they both expect each other. Disa
                                    <!-- Portfolio Modal - Text-->
 
 
-                                   <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public.</p>
+                                   <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find.</p>
 
 
                                    <button class="btn btn-primary" data-bs-dismiss="modal">
