--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                <!-- Masthead Subheading-->
 
 
-               <p class="masthead-subheading font-weight-light mb-0">This matters because there are so many diabled people out there that have loads of talent that companies are wasting just because they are diabled.</p>
+               <p class="masthead-subheading font-weight-light mb-0">This matters because there are so many disabled people out there that have loads of talent that companies are wasting just because they are disabled.</p>
 
 
            </div>
@@ -216,7 +216,7 @@
                            </div>
 
 
-                           <img class="img-fluid" src="assets/img/portfolio/SJImage1.png" alt="..." />
+                           <img class="img-fluid" src="assets/img/portfolio/Peckham.jfif" alt="..." />
 
 
                        </div>
@@ -405,7 +405,7 @@
                <!-- About Section Content-->
 
 
-               <div class="container"><p>Success for the disabled is very important as many who are dissabled feel they will be judged or made fun of just because of their disability.This will cause them to not want to work which leads to them not having a job. Is this really how we want people with disabilities to feel? Now I don't personally have a disability but I would not feel good if this is how I thought others looked at me.I believe as a society we should be more welcoming and incorporative to the disabled to encourage them to want to go out and get a job.</p>
+               <div class="container"><p>Success for the disabled is very important, as many who are disabled feel they will be judged or made fun of just because of their disability. This will cause them to not want to work, which leads to them not having a job. Is this really how we want people with disabilities to feel? Now, I don't personally have a disability, but I would not feel good if this is how I thought others looked at me. There is so much talent that is wasted every year by companies and corporations on disabled people just because they are disabled and they don't believe that they can do things at the level that people without disabilities can. As a society, we should be more welcoming and inclusive to the disabled to encourage them to want to go out and get a job because, like stated above, there are so many disabled people that have talent and a good work ethic, but companies and corporations don't see that in them because they are disabled. </p>
 
 
                </div>
@@ -462,7 +462,7 @@
                <div class="row justify-content-center">
 
 
-                   <div class="col-sm"><p>Contact Harrison Yosick for more infomation on the about section and first image and information on first image. </p></div>
+                   <div class="col-sm"><p>Contact Harrison Yosick for more information on the about section and first image and information on the first image. </p></div>
 
 
                    <div class="col-sm"><p>Contact Jacob Tabish for more information on the video on the third image under the portfolio tab and also the “why it matters” section under the title.</p></div>
@@ -474,7 +474,7 @@
                    <div class="col-sm"><p>Contact Rachel Lowe for more information on the organization section. x</p></div>
 
 
-                   <div class="col-sm"><p>Contact Michael Hecht for more infomation on x</p></div>
+                   <div class="col-sm"><p>Contact Michael Hecht for more information on </p></div>
 
 
                </div>
@@ -483,19 +483,19 @@
                <div class="row justify-content-center">
 
 
-                   <div class="col-sm"><p>Contact Haley Roush for more infomation on </p></div>
+                   <div class="col-sm"><p>Contact Haley Roush for more infomation on financial security for disabled people.</p></div>
 
 
-                   <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                   <div class="col-sm"><p>Contact first name and last name for more infomation on </p></div>
 
 
-                   <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                   <div class="col-sm"><p>Contact first name and last name for more infomation on </p></div>
 
 
-                   <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                   <div class="col-sm"><p>Contact first name and last name for more infomation on </p></div>
 
 
-                   <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                   <div class="col-sm"><p>Contact first name and last name for more infomation on </p></div>
 
 
                </div>
@@ -1080,7 +1080,7 @@ The video is about disability and work and how they both expect each other. Disa
                                    <!-- Portfolio Modal - Title-->
 
 
-                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0"></h2>
+                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Financial security for disabled people</h2>
 
 
                                    <!-- Icon Divider-->
@@ -1110,7 +1110,7 @@ The video is about disability and work and how they both expect each other. Disa
                                    <!-- Portfolio Modal - Text-->
 
 
-                                   <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find.</p>
+                                   <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For</p>
 
 
                                    <button class="btn btn-primary" data-bs-dismiss="modal">
