--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 </div>
             </div>
         </div>
-        <!-- Portfolio Modal 6-->
+         <!-- Portfolio Modal 6-->
         <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" aria-labelledby="portfolioModal6" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
@@ -357,7 +357,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of Image 6</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Misericordia</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -367,7 +367,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage6.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public.</p>
+                                    <p class=“mb-4”>Misericordia provides housing, jobs, and volunteer opportunities for people with disabilities. The goal of misericordia is to provide people with disabilities a fair and honest opportunity in the work place and life as a whole. Misericordia also aids people with disabilities in finding in store jobs, and outsourced work that can be completed from their residence. They are a non-profit organization that obtains all their funding from donations and volunteers. Providing people with disabilities a fair opportunity to enjoy work without stereotypes truly is a step forward to ending discrimination towards people with disabilities in the workplace.  </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
