--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                            </div>
 
 
-                           <img class="img-fluid" src="assets/img/portfolio/SJImage4.png" alt="..." />
+                           <img class="img-fluid" src="assets/img/portfolio/Unemployedpic.jpg" alt="..." />
 
 
                        </div>
@@ -483,13 +483,13 @@
                <div class="row justify-content-center">
 
 
-                   <div class="col-sm"><p>Contact Haley Roush for more infomation on financial security for disabled people.</p></div>
+                   <div class="col-sm"><p>Contact Haley Roush for more information on dealing with discrimination in the work place.</p></div>
 
 
-                   <div class="col-sm"><p>Contact first name and last name for more infomation on </p></div>
+                   <div class="col-sm"><p>Contact Dash Dallaire for more information on the fourth image. </p></div>
 
 
-                   <div class="col-sm"><p>Contact first name and last name for more infomation on </p></div>
+                   <div class="col-sm"><p>Contact Bibianna Rodriguez for more infomation on </p></div>
 
 
                    <div class="col-sm"><p>Contact first name and last name for more infomation on </p></div>
@@ -820,7 +820,7 @@
 
 
                                    <p class="mb-4"><br>
-The video is about disability and work and how they both expect each other. Disability is still a barrier to employment for millions of people- but it doesn't have to be this way. A medical professional, Hannah Barham Brown goes into here in life experiences to argue that people with disabilities are an asset more employers need to welcome. Hannah goes into her life as a diabled person when she was diagnosed with a syndrome called Ehlers-Danlos Syndrome which is a syndrome that affects your connective tissue. After being Diagnosed with this disability she was put in a wheelchair. She had trouble doing a lot of stuff including getting a job because of her disability. The significance of this video is to state that people with disabilities are normal people, they just have a few more problems than others and that disabled people have talent like “normal” people. It is just overlooked because they are diabled. Disability is a big thing that is overlooked in the workplace and a problem that needs to be looked into more.
+The video is about disability and work and how they both expect each other. Disability is still a barrier to employment for millions of people- but it doesn't have to be this way. A medical professional, Hannah Barham Brown goes into here in life experiences to argue that people with disabilities are an asset more employers need to welcome. Hannah goes into her life as a diabled person when she was diagnosed with a syndrome called Ehlers-Danlos Syndrome which is a syndrome that affects your connective tissue. After being Diagnosed with this disability she was put in a wheelchair. She had trouble doing a lot of stuff including getting a job because of her disability. The significance of this video is to state that people with disabilities are normal people, they just have a few more problems than others and that disabled people have talent like “normal” people. It is just overlooked because they are disabled. Disability is a big thing that is overlooked in the workplace and a problem that needs to be looked into more.
 .</p>
 
 
@@ -983,7 +983,7 @@ The video is about disability and work and how they both expect each other. Disa
                                    <!-- Portfolio Modal - Title-->
 
 
-                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of Image 5</h2>
+                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Working From Different Places</h2>
 
 
                                    <!-- Icon Divider-->
@@ -1080,7 +1080,7 @@ The video is about disability and work and how they both expect each other. Disa
                                    <!-- Portfolio Modal - Title-->
 
 
-                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Financial security for disabled people</h2>
+                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Dealing with discrimination</h2>
 
 
                                    <!-- Icon Divider-->
@@ -1104,13 +1104,13 @@ The video is about disability and work and how they both expect each other. Disa
                                    <!-- Portfolio Modal - Image-->
 
 
-                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage6.png" alt="..." />
+                                   <img class="img-fluid rounded mb-5" src="EEOC.pdf" alt="..." />
 
 
                                    <!-- Portfolio Modal - Text-->
 
 
-                                   <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For</p>
+                                   <p class="mb-4">The EEOC (Equal Employment Opportunity Commission) exists to help with discrimination. While a lot of discrimination will have to change based on the   </p>
 
 
                                    <button class="btn btn-primary" data-bs-dismiss="modal">
