--- a/index.html
+++ b/index.html
@@ -489,10 +489,10 @@
                    <div class="col-sm"><p>Contact Dash Dallaire for more information on the fourth image. </p></div>
 
 
-                   <div class="col-sm"><p>Contact Bibianna Rodriguez for more infomation on </p></div>
+                   <div class="col-sm"><p>Contact Bibianna Rodriguez for more information on </p></div>
 
 
-                   <div class="col-sm"><p>Contact first name and last name for more infomation on </p></div>
+                   <div class="col-sm"><p>Contact Margaret Heflin for more infomation on the second image. </p></div>
 
 
                    <div class="col-sm"><p>Contact first name and last name for more infomation on </p></div>
@@ -887,7 +887,7 @@ The video is about disability and work and how they both expect each other. Disa
                                    <!-- Portfolio Modal - Title-->
 
 
-                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of Image 4</h2>
+                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Correlations between Disability and Unemployment</h2>
 
 
                                    <!-- Icon Divider-->
@@ -911,13 +911,13 @@ The video is about disability and work and how they both expect each other. Disa
                                    <!-- Portfolio Modal - Image-->
 
 
-                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage4.png" alt="..." />
+                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Unemployedpic.jpg" alt="..." />
 
 
                                    <!-- Portfolio Modal - Text-->
 
 
-                                   <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public.</p>
+                                   <p class="mb-4">There is a link between those who are disabled and employment status. Those who have disabilities may be overlooked because of their disabilities and not their abilities. Some disabilities enable people to be good at one thing and not another which is often seen as a bad thing.People with disabilities are almost often viewed in a negative way hence the correlation with their employment which is completely wrong and needs to be changed in the workforce.</p>
 
 
                                    <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -1104,13 +1104,13 @@ The video is about disability and work and how they both expect each other. Disa
                                    <!-- Portfolio Modal - Image-->
 
 
-                                   <img class="img-fluid rounded mb-5" src="EEOC.pdf" alt="..." />
+                                   <img class="img-fluid rounded mb-5" src="assets/EEOC.pdf" alt="..." />
 
 
                                    <!-- Portfolio Modal - Text-->
 
 
-                                   <p class="mb-4">The EEOC (Equal Employment Opportunity Commission) exists to help with discrimination. While a lot of discrimination will have to change based on the   </p>
+                                   <p class="mb-4">A big part of why disabled people struggle to find jobs are because of discriminatory employers. These employers may not want to expend resources on making sure disabled people are able to work in their environment.  The EEOC (Equal Employment Opportunity Commission) exists to help with discrimination. While a lot of discrimination will depend entirely on the employers hiring practies, there are still resources that will help to resolve these incidents once they happen. This can help to prevent additional discrimination and help those who need accommodations.   </p>
 
 
                                    <button class="btn btn-primary" data-bs-dismiss="modal">
