--- a/index.html
+++ b/index.html
@@ -717,13 +717,13 @@
                                    <!-- Portfolio Modal - Video-->
 
 
-                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/-C_onGQhiqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                   <security.jpg>
 
 
                                    <!-- Portfolio Modal - Text-->
 
 
-                                   <p class="mb-4">You can also embed Youtube videos by clicking share on a youtube video, copy and past the iframe and insert it as I have above. In place of this tutorial, talk about what is significant about this video. You should also include any necessary content warnings which may include graphic detail, violence, strobe lights, etc. </p>
+                                   <p class="mb-4">This is my text and we have got to edit yada yada </p>
 
 
                                    <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -1104,13 +1104,13 @@ The video is about disability and work and how they both expect each other. Disa
                                    <!-- Portfolio Modal - Image-->
 
 
-                                   <img class="img-fluid rounded mb-5" src="assets/EEOC.pdf" alt="..." />
+                                   <img class="img-fluid rounded mb-5" src="assets/portfolio/EEOC.pdf" alt="..." />
 
 
                                    <!-- Portfolio Modal - Text-->
 
 
-                                   <p class="mb-4">A big part of why disabled people struggle to find jobs are because of discriminatory employers. These employers may not want to expend resources on making sure disabled people are able to work in their environment.  The EEOC (Equal Employment Opportunity Commission) exists to help with discrimination. While a lot of discrimination will depend entirely on the employers hiring practies, there are still resources that will help to resolve these incidents once they happen. This can help to prevent additional discrimination and help those who need accommodations.   </p>
+                                   <p class="mb-4">A big part of why disabled people struggle to find jobs are because of discriminatory employers. These employers may not want to expend resources on making sure disabled people are able to work in their environment. The EEOC (Equal Employment Opportunity Commission) exists to help with discrimination. While a lot of discrimination happens by the rejection of disabled workers, there are still resources that will help in the instance that people are not receiving the accommodations needed or are being discriminated against in another way. This can help to prevent additional discrimination and help those who need accommodations.   </p>
 
 
                                    <button class="btn btn-primary" data-bs-dismiss="modal">
