--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                            </div>
 
 
-                           <img class="img-fluid" src="assets/img/portfolio/SJImage5.png" alt="..." />
+                           <img class="img-fluid" src="assets/img/portfolio/Disabilities.jpg" alt="..." />
 
 
                        </div>
@@ -693,7 +693,7 @@
                                    <!-- Portfolio Modal - Title-->
 
 
-                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Video Title</h2>
+                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">The Disability Problem May Be an Unemployment Problem in Disguise</h2>
 
 
                                    <!-- Icon Divider-->
@@ -717,7 +717,7 @@
                                    <!-- Portfolio Modal - Video-->
 
 
-                                   <security.jpg>
+                                   <socialsecurity.jpg>
 
 
                                    <!-- Portfolio Modal - Text-->
