--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                    <div class="col-sm"><p>Contact Haley Roush for more information on dealing with discrimination in the work place.</p></div>
 
 
-                   <div class="col-sm"><p>Contact Dash Dallaire for more information on the fourth image. </p></div>
+                   <div class="col-sm"><p>Contact Dash Dallaire for more information on the second image. </p></div>
 
 
                    <div class="col-sm"><p>Contact Bibianna Rodriguez for more information on </p></div>
@@ -666,7 +666,7 @@
        <!-- Portfolio Modal 2-->
 
 
-       <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" aria-labelledby="portfolioModal2" aria-hidden="true">
+       <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" aria-labelledby="portfolioModal4" aria-hidden="true">
 
 
            <div class="modal-dialog modal-xl">
@@ -693,7 +693,7 @@
                                    <!-- Portfolio Modal - Title-->
 
 
-                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">The Disability Problem May Be an Unemployment Problem in Disguise</h2>
+                                   <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Misericordia</h2>
 
 
                                    <!-- Icon Divider-->
@@ -714,16 +714,17 @@
                                    </div>
 
 
-                                   <!-- Portfolio Modal - Video-->
+                                   <!-- Portfolio Modal - Image-->
 
 
-                                   <socialsecurity.jpg>
+                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/img6.png" alt="..." />
 
 
                                    <!-- Portfolio Modal - Text-->
 
 
-                                   <p class="mb-4">This is my text and we have got to edit yada yada </p>
+                                   <p class="mb-4">Misericordia provides housing, jobs, and volunteer opportunities for people with disabilities. The goal of misericordia is to provide people with disabilities a fair and honest opportunity in the workplace and life as a whole. Misericordia also aids people with disabilities in finding in store jobs, and outsourced work that can be completed from their residence. They are a non-profit organization that obtains all their funding from donations and volunteers. Providing people with disabilities a fair opportunity to enjoy work without stereotypes truly is a step forward to ending discrimination towards people with disabilities in the workplace
+</p>
 
 
                                    <button class="btn btn-primary" data-bs-dismiss="modal">
